--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=ecommerce
+server.port=${SERVER_PORT:8080}
+server.servlet.context-path=${BASE_URL:/api}
+
+spring.datasource.url=jdbc:h2:mem:itemsdb;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=${DATABASE_USER:sa}
+spring.datasource.password=${DATABASE_PASSWORD:password}
+
+# HikariCP Connection Pool Settings
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.pool-name=HikariPool
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
