--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,11 +1,15 @@
 spring.application.name=ecommerce
-server.port=${SERVER_PORT:8080}
-server.servlet.context-path=${BASE_URL:/api}
+server.port=8080
+server.servlet.context-path=/api
 
-spring.datasource.url=jdbc:h2:mem:itemsdb;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
+spring.datasource.url=jdbc:h2:mem:itemsdb;DB_CLOSE_DELAY=-1;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=${DATABASE_USER:sa}
-spring.datasource.password=${DATABASE_PASSWORD:password}
+spring.datasource.username=sa
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # HikariCP Connection Pool Settings
 spring.datasource.hikari.minimum-idle=2
